--- a/blogpost.html
+++ b/blogpost.html
@@ -8,8 +8,7 @@
             <div id=cabecera">
                 Hyperblog 
                 <span id="tagline">Tu blog
-                    de confianza
-                </span>
+                    de confianza</span>
             </div>
             <div id="post">
                 <h1>Este es el título
